tests/errors/implicit_typing3.f90
module implicit_typing3_module
    implicit none
    contains
        function fun()
        end function fun
end module implicit_typing3_module

program main
end program main
